# softbody-sim

./: CMakeLists.txt  README.md
src/: main.c
src/app/: CMakeLists.txt  app.c  app.h  constraint.c  point.c
src/input_controller/: CMakeLists.txt  input_controller.c  input_controller.h
src/sb_app/: CMakeLists.txt  app.c  app.h
src/sb_blob/: CMakeLists.txt  blob.c  blob.h  point.c
src/sb_body/: CMakeLists.txt  body.c  body.h  constraint.c  point.c
src/vector/: vector.c  vector.h
